src/objects/echosign_dev1__SIGN_Agreement__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <fields>
        <fullName>Apttus_Echosign__Apttus_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to apttus agreement object.</description>
        <label>Apttus Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>eSignatures</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Echosign__Apttus_RSPCAttachments__c</fullName>
        <description>Stores the modified name of the attachments sent with the Agreement, in order to relate them to their actual parents.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stores the modified name of the attachments sent with the Agreement, in order to relate them to their actual parents.</inlineHelpText>
        <label>Apttus_RSPCAttachments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Echosign__DocumentIds__c</fullName>
        <description>Document Ids selected for signatures</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Document Ids selected for signatures</inlineHelpText>
        <label>Document Ids</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Echosign__Is_Transient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the Echosign agreement is newly created and considered transient. An Echosign agreement is considered transient until a user explicitly saves it to the database when initially creating it.</description>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__AdditionalOptions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Additional_Recipient_1_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 1 (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Additional_Recipient_2_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 2 (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Additional_Recipient_3_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 3 (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__AgreementLocale__c</fullName>
        <description>Select the language of the recipients.</description>
        <inlineHelpText>Select the language of the recipients.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chinese (China)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Taiwan)</fullName>
                    <label>Chinese (Taiwan region)</label>
                </value>
                <value>
                    <fullName>Croatian (Croatia)</fullName>
                </value>
                <value>
                    <fullName>Czech (Czech Republic)</fullName>
                </value>
                <value>
                    <fullName>Danish (Denmark)</fullName>
                </value>
                <value>
                    <fullName>Dutch (Netherlands)</fullName>
                </value>
                <value>
                    <fullName>English (United Kingdom)</fullName>
                </value>
                <value>
                    <fullName>English (United States)</fullName>
                    <default>true</default>
                    <label>English (United States)</label>
                </value>
                <value>
                    <fullName>Finnish (Finland)</fullName>
                </value>
                <value>
                    <fullName>French (France)</fullName>
                </value>
                <value>
                    <fullName>German (Germany)</fullName>
                </value>
                <value>
                    <fullName>Hungarian (Hungary)</fullName>
                </value>
                <value>
                    <fullName>Icelandic (Iceland)</fullName>
                </value>
                <value>
                    <fullName>Indonesian (Indonesia)</fullName>
                </value>
                <value>
                    <fullName>Italian (Italy)</fullName>
                </value>
                <value>
                    <fullName>Japanese (Japan)</fullName>
                </value>
                <value>
                    <fullName>Korean (South Korea)</fullName>
                </value>
                <value>
                    <fullName>Malay (Malaysia)</fullName>
                </value>
                <value>
                    <fullName>Norwegian (Bokmal: Norway)</fullName>
                </value>
                <value>
                    <fullName>Norwegian (Norway)</fullName>
                </value>
                <value>
                    <fullName>Norwegian (Nynorsk: Norway)</fullName>
                </value>
                <value>
                    <fullName>Polish (Poland)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Portugal)</fullName>
                </value>
                <value>
                    <fullName>Romanian (Romania)</fullName>
                </value>
                <value>
                    <fullName>Russian (Russia)</fullName>
                </value>
                <value>
                    <fullName>Slovak (Slovakia)</fullName>
                </value>
                <value>
                    <fullName>Slovenian (Slovenia)</fullName>
                </value>
                <value>
                    <fullName>Spanish (Basque: Spain)</fullName>
                </value>
                <value>
                    <fullName>Spanish (Catalan: Spain)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Type</label>
        <referenceTo>echosign_dev1__Agreement_Type__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_ID_Order2__c</fullName>
        <description>(Optional) Enter a list of comma separated Attachment IDs in the order to be displayed.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(Optional) Enter a list of comma separated Attachment IDs in the order to be displayed.</inlineHelpText>
        <label>Attachment ID Order</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_ID_Order__c</fullName>
        <description>DEPRECATED</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>DEPRECATED</inlineHelpText>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Service_Invocation_Count__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment Service Invocation Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Attachment_Workflow_Index__c</fullName>
        <description>(Optional) Enter a list of comma separated workflow file index.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(Optional) Enter a list of comma separated workflow file index.</inlineHelpText>
        <label>Attachment Workflow Index</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Authoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preview the document or drag and drop form fields or signature fields on to the document before it is sent for signature.</description>
        <inlineHelpText>Preview the document or drag and drop form fields or signature fields on to the document before it is sent for signature.</inlineHelpText>
        <label>Preview or Position Signature Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__AutoUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Background_Action__c</fullName>
        <label>Background Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Remind</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Cancel_Delete_Notify_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Cancel_Delete_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cancel Delete Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Cc__c</fullName>
        <description>Send an extra copy of signed agreement to these email addresses.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Send an extra copy of signed agreement to these email addresses.</inlineHelpText>
        <label>Send email copies to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>R00N70000001hM2JEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Data_Mapping_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Mapping Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Data_Mapping_Result__c</fullName>
        <label>Data Mapping Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateSentDate__c</fullName>
        <formula>DATEVALUE( echosign_dev1__DateSent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sent (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateSent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateSignedDate__c</fullName>
        <formula>DATEVALUE( echosign_dev1__DateSigned__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Signed (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateSigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateViewedDate__c</fullName>
        <formula>DATEVALUE( echosign_dev1__DateViewed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Viewed (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DateViewed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DaysUnsigned__c</fullName>
        <formula>NOW() - echosign_dev1__DateSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Unsigned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DaysUntilSigned__c</fullName>
        <formula>echosign_dev1__DateSigned__c - echosign_dev1__DateSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Signed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__DaysUntilSigningDeadline__c</fullName>
        <description>Specify the number of days until the agreement expires and can no longer be signed.</description>
        <inlineHelpText>Specify the number of days until the agreement expires and can no longer be signed.</inlineHelpText>
        <label>Expire document in X days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document__c</fullName>
        <formula>IF( LEN(echosign_dev1__SignedPDF__c) &gt; 0, HYPERLINK( echosign_dev1__SignedPDF__c, IMAGE(&apos;https://secure.echosignforsalesforce.com/images/salesforce-pdf-icon.gif&apos;, &apos;PDF&apos;) &amp; &apos; &apos; &amp; Name  &amp; &apos;.pdf&apos;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Automatic_Reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send an automatic weekly or daily reminder to recipients.</description>
        <inlineHelpText>Send an automatic weekly or daily reminder to recipients.</inlineHelpText>
        <label>Enable Automatic Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Hosted_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Host signing to get in-person signatures from your computer or device.</description>
        <inlineHelpText>Host signing to get in-person signatures from your computer or device.</inlineHelpText>
        <label>Host signing for the first signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EncodedPassword__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Encoded Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__ErrorMessage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__External_Password__c</fullName>
        <label>Sign External Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__External_Signers_Verification_Method__c</fullName>
        <label>External Signers Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Password to sign agreement</fullName>
                </value>
                <value>
                    <fullName>Knowledge based authentication</fullName>
                </value>
                <value>
                    <fullName>Web identity authentication</fullName>
                    <label>Web identity authentication (DEPRECATED)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Failed_Notifications__c</fullName>
        <label>Failed Notifications</label>
        <summaryFilterItems>
            <field>echosign_dev1__Agreement_Notification__c.echosign_dev1__Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>echosign_dev1__Agreement_Notification__c.echosign_dev1__Agreement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Fill_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fill &amp; Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Internal_Password__c</fullName>
        <label>Sign Internal Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Internal_Signers_Verification_Method__c</fullName>
        <label>Internal Signers Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Password to sign agreement</fullName>
                </value>
                <value>
                    <fullName>Knowledge based authentication</fullName>
                </value>
                <value>
                    <fullName>Web identity authentication</fullName>
                    <label>Web identity authentication (DEPRECATED)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__LastEventId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LastEventId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Legacy_Record_ID__c</fullName>
        <description>This field stores the Record ID for any records converted from the unmanaged package.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field stores the Record ID for any records converted from the unmanaged package.</inlineHelpText>
        <label>Legacy Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Mapping_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Merge Mapping Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Mapping_Result__c</fullName>
        <label>Merge Mapping Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Message__c</fullName>
        <defaultValue>&quot;Please review and sign this document.&quot;</defaultValue>
        <description>Specify a message to the recipients.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify a message to the recipients.</inlineHelpText>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Minutes_Until_Signed__c</fullName>
        <formula>echosign_dev1__DaysUntilSigned__c * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes Until Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__More_Recipients__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Recipients (Email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Name__c</fullName>
        <description>Agreement name can have up to 255 characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Agreement name can have up to 255 characters.</inlineHelpText>
        <label>Agreement Name(Long Version))</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__NewPassword__c</fullName>
        <formula>IF(OR( echosign_dev1__PasswordProtectSign__c, echosign_dev1__PasswordProtectPDF__c),  IF( LEN(echosign_dev1__EncodedPassword__c) &gt; 0, &apos;Password has been set&apos;, &apos;&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Password</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__On_Load_Action__c</fullName>
        <label>On Load Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Remind</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>R00N70000001hM2REAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Partner_Server_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_370</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Server URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__PasswordProtectPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The signed PDF that is sent to all parties is encrypted and this password will be required to open it. Don&apos;t lose the password as it is not recoverable.</description>
        <inlineHelpText>The signed PDF that is sent to all parties is encrypted and this password will be required to open it. Don&apos;t lose the password as it is not recoverable.</inlineHelpText>
        <label>Password required to view PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__PasswordProtectSign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password required to sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Password__c</fullName>
        <label>View Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Percent_Signed__c</fullName>
        <formula>IF(ISPICKVAL( echosign_dev1__Status__c , &quot;Signed&quot;),100,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Post_Sign_Redirect_Delay__c</fullName>
        <label>Post Sign Redirect Delay (seconds)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Post_Sign_Redirect_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Post Sign Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__PreferFax__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checking this box, Adobe Sign  will send the document to the Contact&apos;s Fax number. If the Contact&apos;s Fax Number is empty, Adobe Sign will send the document to the Contact&apos;s Email address.</inlineHelpText>
        <label>Send written signatures to fax number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Process_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Data_Mapping__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Rebuild_Recipient_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this field to force the basic Adobe Sign agreement and advanced Adobe Sign agreement pages to rebuild the related Recipient List using the Lookup fields on the Agreement record.</description>
        <inlineHelpText>Set this field to force the basic Adobe Sign agreement and advanced Adobe Sign agreement pages to rebuild the related Recipient List using the Lookup fields on the Agreement record.</inlineHelpText>
        <label>Rebuild Recipient List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 1 (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 2 (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Agreements (2)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 3 (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Agreements (3)</relationshipLabel>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Addresses__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Lead2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 1 (Lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Lead3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 2 (Lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Agreements (2)</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Lead4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Recipient 3 (Lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Agreements (3)</relationshipLabel>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__RemindRecipient__c</fullName>
        <label>Remind recipient to sign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Every Day, Until Signed</fullName>
                </value>
                <value>
                    <fullName>Every Week, Until Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Result__c</fullName>
        <formula>IF( AND(LEN(echosign_dev1__ErrorMessage__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &apos;Draft&apos;)), 
      IMAGE(&apos;https://secure.echosignforsalesforce.com/images/salesforce-error.gif&apos;, &apos;Error&apos;) &amp; &apos; &apos; &amp; echosign_dev1__ErrorMessage__c, 
      IF( AND(LEN(echosign_dev1__SignedPDF__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &apos;Signed&apos;)), 
           HYPERLINK( echosign_dev1__SignedPDF__c , IMAGE(&apos;https://secure.echosignforsalesforce.com/images/salesforce-pdf-icon.gif&apos;, &apos;PDF&apos;) &amp; &apos; &apos; &amp; Name &amp; &apos; - signed.pdf&apos;), 
           &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__ReturnURL_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ReturnURL_Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__ReturnURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ReturnURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SenderSigns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this option if you also need to sign this agreement. Then select if you sign first or if your recipients sign first.</description>
        <inlineHelpText>Check this option if you also need to sign this agreement. Then select if you sign first or if your recipients sign first.</inlineHelpText>
        <label>I also need to sign this document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sender_Recorded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender Recorded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sender_Signs_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sender Signs Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sender_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements_Senders</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>